[gd_scene load_steps=13 format=2]

[ext_resource path="res://Things/Catapult/Catapult.gd" type="Script" id=1]
[ext_resource path="res://Things/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Things/Catapult/catapult_left.png" type="Texture" id=3]
[ext_resource path="res://Things/Catapult/catapult_right.png" type="Texture" id=4]
[ext_resource path="res://Things/Catapult/flag.png" type="Texture" id=5]
[ext_resource path="res://Shaders/wind.shader" type="Shader" id=6]
[ext_resource path="res://Things/Catapult/stretch.wav" type="AudioStream" id=7]
[ext_resource path="res://Things/Catapult/fire.wav" type="AudioStream" id=8]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 6 )
shader_param/speed = 1.0
shader_param/minStrength = 0.05
shader_param/maxStrength = 0.01
shader_param/strengthScale = 100.0
shader_param/interval = 3.5
shader_param/detail = 1.0
shader_param/distortion = null
shader_param/heightOffset = null
shader_param/offset = 0.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 146.073, 138.294 )

[sub_resource type="AudioStreamRandomPitch" id=3]
audio_stream = ExtResource( 7 )
random_pitch = 1.2

[sub_resource type="AudioStreamRandomPitch" id=4]
audio_stream = ExtResource( 8 )
random_pitch = 1.2

[node name="Catapult" type="Node2D"]
script = ExtResource( 1 )

[node name="flag" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 138.858, 131.988 )
texture = ExtResource( 5 )
flip_h = true

[node name="flag2" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( -147.047, 133.67 )
texture = ExtResource( 5 )
flip_h = true

[node name="ClickArea" type="Area2D" parent="."]
position = Vector2( 0.561218, 42 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
position = Vector2( 7.36043, 29.2298 )
shape = SubResource( 2 )

[node name="catapult_right" type="Sprite" parent="."]
position = Vector2( 23.3717, 91.6136 )
texture = ExtResource( 4 )

[node name="ElasticBack" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 18.0
default_color = Color( 0.968627, 0.541176, 0.764706, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( -0.353546, 0.270294 )

[node name="ElasticFront" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 18.0
default_color = Color( 0.972549, 0.611765, 0.8, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="catapult_left" type="Sprite" parent="."]
position = Vector2( -20.7246, 92.4282 )
texture = ExtResource( 3 )

[node name="ElasticRightEnd" type="Node2D" parent="."]
position = Vector2( 39.9966, -4.39124 )

[node name="ElasticLeftEnd" type="Node2D" parent="."]
position = Vector2( -42.1774, -1.09383 )

[node name="ElasticReturn" type="Tween" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 3 )
volume_db = -1.0

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 4 )
volume_db = 1.0

[connection signal="body_entered" from="ClickArea" to="." method="_on_ClickArea_body_entered"]
[connection signal="input_event" from="ClickArea" to="." method="_on_ClickArea_input_event"]
